tests/valid_inputs/assign_div.cpp
// test '/='

int main() {
	int a = 84;
	return a /= 2;
}
