tests/invalid_inputs/sema/def_arg_redef.cpp

int foo(int a, int b = 5);
int foo(int a = 42, int b = 84);
